--- a/Lab_3/demo/src/main/webapp/resources/style/startPageStyle.css
+++ b/Lab_3/demo/src/main/webapp/resources/style/startPageStyle.css
@@ -1,10 +1,33 @@
-.bodyIm {
-    background-image: url(#{request.contextPath}resources/style/img/main_pic.jpg);
+html {
     /*background-size: no-repeat;
-
-     */
-    background-position: center;
+ background-image: url(#{request.contextPath}/img/main_pic.jpg);
+ background-position: center;
     background-size: cover;
     height: 400px;
     width: 400px;
+     */
+    font-size: large;
+    font-family: "Comic Sans MS";
+
+
+    background-size: 100% 100%;
+    /*height: 800px;
+    width: 1500px;
+
+     */
+
+    background-image: linear-gradient(
+            220deg,
+            hsl(0deg 0% 0%) 0%,
+            hsl(208deg 100% 15%) 25%,
+            hsl(201deg 100% 21%) 36%,
+            hsl(197deg 100% 28%) 42%,
+            hsl(201deg 54% 45%) 47%,
+            hsl(203deg 59% 61%) 52%,
+            hsl(187deg 100% 41%) 59%,
+            hsl(173deg 100% 39%) 66%,
+            hsl(136deg 53% 57%) 75%,
+            hsl(71deg 58% 49%) 87%,
+            hsl(41deg 100% 54%) 100%
+    );
 }
