--- a/Lab_3/demo/src/main/webapp/resources/style/startPageStyle.css
+++ b/Lab_3/demo/src/main/webapp/resources/style/startPageStyle.css
@@ -1,30 +1,72 @@
 body {
-    /*background-size: no-repeat;
- background-image: url(#{request.contextPath}/img/main_pic.jpg);
- background-position: center;
-    background-size: cover;
-    height: 400px;
-    width: 400px;
-     */
-    font-size: 40px;
     font-family: "Comic Sans MS";
-    text-align: center;
-
-    background-size: 100% 100%;
-
     background: #2b2a32;
 }
 #headTable {
-    margin-left: 450px;
+    font-size: 60px;
+    margin-left: 250px;
     margin-top: 100px;
     margin-bottom: 100px;
-    outline-color: magenta;
-    background: antiquewhite;
-    /*border-color: black;
-    border-width: medium;
+    text-align: center;
 
-     */
+    background-blend-mode: screen;
+    background:
+            linear-gradient(transparent, limegreen),
+            linear-gradient(-90deg, skyblue, transparent),
+            linear-gradient(90deg, coral, transparent);
+
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
+
 #headTable:hover {
-    background: aquamarine;
+    background-image:  linear-gradient(limegreen, transparent),
+    linear-gradient(90deg, skyblue, transparent),
+    linear-gradient(-90deg, coral, transparent);
+    border-image-slice: 1;
+    border-width: 2px;
+    border-style: solid;
+    border-image: linear-gradient(45deg, skyblue, coral, yellow) 1;
+}
+
+#clock {
+    text-align: center;
+    font-size: 50px;
+    background-blend-mode: screen;
+    background:
+            linear-gradient(transparent, limegreen),
+            linear-gradient(-90deg, skyblue, transparent),
+            linear-gradient(90deg, coral, transparent);
+
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    margin-left: 400px;
+    margin-right: 500px;
+}
+
+#clock:hover {
+    background-image:  linear-gradient(limegreen, transparent),
+    linear-gradient(90deg, skyblue, transparent),
+    linear-gradient(-90deg, coral, transparent);
+    border-image-slice: 1;
+    border-width: 2px;
+    border-style: solid;
+    border-image: linear-gradient(45deg, skyblue, coral, yellow) 1;
+}
+
+#date {
+    text-align: center;
+    font-size: 40px;
+    background-blend-mode: screen;
+    background:
+            linear-gradient(transparent, limegreen),
+            linear-gradient(-90deg, skyblue, transparent),
+            linear-gradient(90deg, coral, transparent);
+
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+
+    margin-bottom: 50px;
+    margin-left: 400px;
+    margin-right: 500px;
 }
