--- a/Lab_3/demo/src/main/webapp/resources/style/startPageStyle.css
+++ b/Lab_3/demo/src/main/webapp/resources/style/startPageStyle.css
@@ -70,3 +70,26 @@ body {
     margin-left: 400px;
     margin-right: 500px;
 }
+#toApplication {
+    text-align: center;
+    margin-left: 1100px;
+    font-size: 30px;
+}
+#toApplication:hover {
+    border-image-slice: 1;
+    border-width: 2px;
+    border-style: solid;
+    border-image: linear-gradient(45deg, skyblue, coral, yellow) 1;
+}
+
+.my_commandLink {
+    color: #a2d9b7;
+}
+
+.my_commandLink:hover {
+    color: yellow;
+}
+
+.my_commandLink:active {
+    color: coral;
+}
